@@ -20,6 +20,11 @@
 
 package net.sourceforge.atunes.kernel.actions;
 
+import java.awt.event.ActionEvent;
+import java.awt.event.KeyEvent;
+
+import javax.swing.KeyStroke;
+
 import net.sourceforge.atunes.model.IPlayerHandler;
 import net.sourceforge.atunes.utils.I18nUtils;
 
@@ -35,6 +40,7 @@ public class PlayPreviousAudioObjectAction extends CustomAbstractAction {
     
     public PlayPreviousAudioObjectAction() {
     	super(I18nUtils.getString("PREVIOUS"));
+    	putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_R, ActionEvent.CTRL_MASK));
     }
 
     @Override
